--- a/endnote.bib
+++ b/endnote.bib
@@ -515,3 +515,59 @@ Section: Report}
 	langid = {english},
 	file = {Springer Full Text PDF:/home/hcp4715/Zotero/storage/MVH6TEDR/McNeish and Wolf - 2020 - Thinking twice about sum scores.pdf:application/pdf}
 }
+
+@article{brady_mad_2020,
+	title = {The {MAD} Model of Moral Contagion: The Role of Motivation, Attention, and Design in the Spread of Moralized Content Online},
+	volume = {15},
+	issn = {1745-6916},
+	url = {https://doi.org/10.1177/1745691620917336},
+	doi = {10.1177/1745691620917336},
+	shorttitle = {The {MAD} Model of Moral Contagion},
+	abstract = {With more than 3 billion users, online social networks represent an important venue for moral and political discourse and have been used to organize political revolutions, influence elections, and raise awareness of social issues. These examples rely on a common process to be effective: the ability to engage users and spread moralized content through online networks. Here, we review evidence that expressions of moral emotion play an important role in the spread of moralized content (a phenomenon we call moral contagion). Next, we propose a psychological model called the motivation, attention, and design ({MAD}) model to explain moral contagion. The {MAD} model posits that people have group-identity-based motivations to share moral-emotional content, that such content is especially likely to capture our attention, and that the design of social-media platforms amplifies our natural motivational and cognitive tendencies to spread such content. We review each component of the model (as well as interactions between components) and raise several novel, testable hypotheses that can spark progress on the scientific investigation of civic engagement and activism, political polarization, propaganda and disinformation, and other moralized behaviors in the digital age.},
+	pages = {978--1010},
+	number = {4},
+	journaltitle = {Perspectives on Psychological Science},
+	shortjournal = {Perspect Psychol Sci},
+	author = {Brady, William J. and Crockett, M. J. and Van Bavel, Jay J.},
+	urldate = {2020-09-07},
+	date = {2020-07-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc}
+}
+
+@article{brady_attentional_2020,
+	title = {Attentional capture helps explain why moral and emotional content go viral},
+	volume = {149},
+	issn = {1939-2222(Electronic),0096-3445(Print)},
+	doi = {10.1037/xge0000673},
+	abstract = {Our social media newsfeeds are filled with a variety of content all battling for our limited attention. Across 3 studies, we investigated whether moral and emotional content captures our attention more than other content and if this may help explain why this content is more likely to go viral online. Using a combination of controlled lab experiments and nearly 50,000 political tweets, we found that moral and emotional content are prioritized in early visual attention more than neutral content, and that such attentional capture is associated with increased retweets during political conversations online. Furthermore, we found that the differences in attentional capture among moral and emotional stimuli could not be fully explained by differences in arousal. These studies suggest that attentional capture is 1 basic psychological process that helps explain the increased diffusion of moral and emotional content during political discourse on social media, and shed light on ways in which political leaders, disinformation profiteers, marketers, and activist organizations can spread moralized content by capitalizing on natural tendencies of our perceptual systems. ({PsycINFO} Database Record (c) 2020 {APA}, all rights reserved)},
+	pages = {746--756},
+	number = {4},
+	journaltitle = {Journal of Experimental Psychology: General},
+	author = {Brady, William J. and Gantman, Ana P. and Van Bavel, Jay J.},
+	date = {2020},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Attentional Capture, Discourse Analysis, Emotional Content, Morality, Online Social Networks, Physiological Arousal, Social Media, Test Construction, Visual Attention},
+	file = {Snapshot:/home/hcp4715/Zotero/storage/FPWUBMGN/2019-52292-001.html:text/html;BradyGantmanVanBavel-MoralContagionAttention-Preprint.docx:/home/hcp4715/Zotero/storage/ZU6AIAQG/BradyGantmanVanBavel-MoralContagionAttention-Preprint.docx:application/vnd.openxmlformats-officedocument.wordprocessingml.document}
+}
+
+
+@article{juechems_where_2019,
+	title = {Where Does Value Come From?},
+	volume = {23},
+	issn = {1364-6613},
+	url = {http://www.sciencedirect.com/science/article/pii/S1364661319302001},
+	doi = {10.1016/j.tics.2019.07.012},
+	abstract = {The computational framework of reinforcement learning ({RL}) has allowed us to both understand biological brains and build successful artificial agents. However, in this opinion, we highlight open challenges for {RL} as a model of animal behaviour in natural environments. We ask how the external reward function is designed for biological systems, and how we can account for the context sensitivity of valuation. We summarise both old and new theories proposing that animals track current and desired internal states and seek to minimise the distance to a goal across multiple value dimensions. We suggest that this framework readily accounts for canonical phenomena observed in the fields of psychology, behavioural ecology, and economics, and recent findings from brain-imaging studies of value-guided decision-making.},
+	pages = {836--850},
+	number = {10},
+	journaltitle = {Trends in Cognitive Sciences},
+	shortjournal = {Trends in Cognitive Sciences},
+	author = {Juechems, Keno and Summerfield, Christopher},
+	urldate = {2020-09-07},
+	date = {2019-10-01},
+	langid = {english},
+	keywords = {goal-directed decision-making, homeostasis, medial prefrontal cortex, reinforcement learning, reward, value},
+	file = {ScienceDirect Snapshot:/home/hcp4715/Zotero/storage/DNLBLVY3/S1364661319302001.html:text/html}
+}
